# openapi2md

./: .gitignore  README.md  main.py  openapi.json  openapi.md  pyproject.toml
openapi2md/: main.py  openapi2md.py
openapi2md/templates/: auth-template.mdx  cURL-template.md  cURL-template.mdx  combined-template.mdx  info-template.mdx  path-template.mdx  paths-template.mdx  request-template.mdx  response-template.mdx
