[project]
name = "py-openapi2md"
version = "0.1.6"
description = "OpenAPI to Markdown generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsf>=0.11.2",
    "pyinstaller>=6.16.0",
]

[tool.setuptools.package-data]
"openapi2md" = ["templates/*.mdx"]

[project.scripts]
openapi2md = "openapi2md.main:main"
